@@ -1,3 +1,7 @@
+2006-04-27  Don Allingham  <don@gramps-project.org>
+	* src/ViewManager.py: support for keypress events
+	* src/gramps.py: fix gnome init
+
 2006-04-26  Alex Roitman  <shura@gramps-project.org>
 	* src/plugins/PatchNames.py (PatchNames.on_ok_clicked): Properly
 	call update.
